--- a/.gradient/workflows/nlp-text-generation.yaml
+++ b/.gradient/workflows/nlp-text-generation.yaml
@@ -45,12 +45,13 @@ jobs:
     uses: script@v1
     with:
       script: |-
-        cp -R /inputs/repo /nlp
-        cd /nlp
-        pip3 install -U transformers
-        python3 nlp_text_generation.py
-        mv output.txt /outputs/generatedText
-        ls "-aFlR" /outputs/generatedText
+          lscpu
+#         cp -R /inputs/repo /nlp
+#         cd /nlp
+#         pip3 install -U transformers
+#         python3 nlp_text_generation.py
+#         mv output.txt /outputs/generatedText
+#         ls "-aFlR" /outputs/generatedText
       image: paperspace/transformers-gpu:0.4.0
 
 # Appendix: Extra details
